--- a/facturacionMl.html
+++ b/facturacionMl.html
@@ -319,7 +319,7 @@
           <button type="button" class="btn btn-primary" onclick="saveValue()">Guardar</button>
         </div>
       </div>
-    </div>
+    </div> 
   </div>
   <!-- Fin Modal Actualizar Precio -->
     
@@ -327,6 +327,11 @@
         <a href="#" id="scrollToTop" class="btn btn-warning" style="display: none;">
             <i class="fas fa-arrow-up"></i>
         </a>
+
+    <!-- Botón de flecha hacia Abajo -->
+    <a href="#" id="scrollToDown" class="btn btn-warning" style="display: none;">
+        <i class="fas fa-arrow-down"></i> <!-- Cambiar a flecha hacia abajo -->
+    </a>
     
         <footer class="text-center">
             <img class="logo-foot" src="./Img/Novogar N.png" alt="Logo Novogar">
