--- a/facturacionMl.html
+++ b/facturacionMl.html
@@ -187,6 +187,11 @@
     <span class="spinner-ios-ml" role="status" aria-hidden="true"></span>
 </div>
 
+<!-- Agrega este contenedor para mostrar el mensaje de búsqueda -->
+<div id="search-status2" class="alert-danger-ml" style="display: none;">
+    <span id="search-message2">Para buscar en toda la base de datos <i class="bi bi-fire"></i> debes insertar un número de Operacion válido</span>
+</div>
+
 <!-- Tu div de error existente -->
 <div class="error-message" style="display: none;">
     <div class="d-flex flex-column align-items-center justify-content-center text-center w-100">
