--- a/meliAr.html
+++ b/meliAr.html
@@ -608,6 +608,8 @@ document.addEventListener('DOMContentLoaded', function() {
 
 <!-- Incluir jsPDF -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jsbarcode@3.11.0/dist/JsBarcode.all.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bwip-js/2.1.0/bwip-js.min.js"></script>
 
 
     <!-- Scripts Bootstrap-->
