--- a/bna.html
+++ b/bna.html
@@ -18,21 +18,30 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="shortcut icon" href="./Img/caja.png">
     <link href="https://fonts.googleapis.com/css2?family=Signika+Negative:wght@300..700&display=swap" rel="stylesheet">  
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script>
+        // Verificación de acceso antes de cargar el contenido de la página
+        const userType = localStorage.getItem('userType');
+        if (userType === 'placeit') {
+            localStorage.setItem('accessDenied', 'true');
+            window.location.href = 'MeliArPlaceit.html';
+        }
+    </script>
 </head>
 
 <script>
-    // Verificación de sesión
+    document.addEventListener('DOMContentLoaded', () => {
+        checkLogin();
+    });
+
     function checkLogin() {
         const savedTimestamp = localStorage.getItem('loginTimestamp');
-        const isExpired = !savedTimestamp || (Date.now() - savedTimestamp) > 10800000; // 3 horas
+        const isExpired = !savedTimestamp || (Date.now() - savedTimestamp) > 28800000;
 
         if (isExpired) {
-            window.location.href = 'logipaq.html'; // Redirige al login si la sesión ha expirado
+            window.location.href = 'logipaq.html'; 
         }
     }
-
-    // Ejecutar la verificación al cargar la página
-    checkLogin();
 </script>
 
 <body class="envios-body">
@@ -265,8 +274,8 @@
         <a href="https://novogar.com.ar/info/empresa" target="_blank">Quienes somos</a>
         <a href="https://novogar.com.ar/info/Sucursales" target="_blank">Sucursales</a>
         <a href="https://novogar.com.ar/info/ventaTelefonica" target="_blank">Atención al cliente</a>
-    </footer>
-
+        <button id="logoutButton" class="btn btn-danger mt-3"><i class="bi bi-person-gear mr-1"></i>Cerrar Sesión</button>
+    </footer>   
 
     <!-- Scripts Firebase-->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
