--- a/despachos.html
+++ b/despachos.html
@@ -455,6 +455,8 @@
         <i class="fas fa-arrow-down"></i> <!-- Cambiar a flecha hacia abajo -->
     </a>
 
+    <div id="camera-preview" style="display: none;"></div>
+
     <!-- Info WiFi -->
     <div id="notification-ios-wifi" class="notification-ios-wifi">
         <img src="./Img/wifiLogi.gif" alt="WiFi Icon" class="wifi-icon-ios-wifi">
