--- a/bna.html
+++ b/bna.html
@@ -268,6 +268,11 @@
     </script>
     <!-- Fin info WiFi -->
 
+    <div class="toast-container position-fixed bottom-0 end-0 p-3">
+    <!-- Toasts-->
+    </div>
+    
+
     <footer class="center">
         <img class="logo-foot" src="./Img/Novogar N.png" alt="Logo Novogar">
         <a class="www" href="https://novogar.com.ar/" target="_blank">NOVOGAR</a>
