--- a/bna.html
+++ b/bna.html
@@ -103,6 +103,11 @@
                                 <span class="visually-hidden"></span>
                             </span>
                         </button>
+
+                        <button id="btnSlack" type="button" class="btn btn-dark position-relative" style="white-space: nowrap">
+                            <img src="./Img/slack.png" alt="Slack">
+                            <span id="contadorCards4" class="badge badge-light position-absolute top-0 start-100 translate-middle rounded-pill ios-badge"><i class="fas fa-spinner fa-spin"></i></span>
+                        </button>
                 
                         <button id="btnSwitch1" type="button" class="btn btn-info position-relative" style="white-space: nowrap">
                             <i class="bi bi-1-circle-fill" style="font-size: 24px;"></i>
