--- a/bna.html
+++ b/bna.html
@@ -89,7 +89,7 @@
                 <div class="trio-de-botones-container">
                     <div class="trio-de-botones">
                         <button id="btnFacturar" type="button" class="btn btn-primary position-relative" style="white-space: nowrap;">
-                            Facturar <i class="bi bi-cart-check-fill"></i>
+                            Facturar <i class="bi bi-cart-check-fill" style="font-size: 24px;"></i>
                             <span id="contadorCardsFacturar" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger badge-large">
                                 <i class="fas fa-spinner fa-spin"></i>
                                 <span class="visually-hidden"></span>
@@ -97,7 +97,7 @@
                         </button>
                         
                         <button id="btnPreparar" type="button" class="btn btn-secondary position-relative" style="white-space: nowrap;">
-                            Preparar <i class="bi bi-box2"></i>
+                            <i class="bi bi-box2" style="font-size: 24px;"></i>
                             <span id="contadorCards" class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger badge-large">
                                 <i class="fas fa-spinner fa-spin"></i>
                                 <span class="visually-hidden"></span>
