--- a/facturacionMl.html
+++ b/facturacionMl.html
@@ -285,19 +285,40 @@
             <div class="modal-body">
                 <textarea id="comentarioInput" class="form-control" placeholder="Escribe tu comentario aquí..." rows="3" style="resize: none;"></textarea>
                 
-                <!-- Input de Email -->
-                <div class="input-group mt-3">
-                    <span class="input-group-text"><i class="ios-fact bi bi-envelope-fill"></i></span>
-                    <input type="email" class="form-control" placeholder="Actualizar email" aria-label="Email">
-                    <button id="guardarEmailBtn" class="btn btn-primary-2" type="button">Guardar</button>
-                </div>
+                        <!-- Input de Email -->
+                        <div class="input-group mt-3">
+                            <span class="input-group-text"><i class="ios-fact bi bi-envelope-fill"></i></span>
+                            <input type="email" class="form-control" placeholder="Actualizar email" aria-label="Email">
+                            <button id="guardarEmailBtn" class="btn btn-primary-2" type="button">Guardar</button>
+                        </div>
 
-                <!-- Input de Teléfono -->
-                <div class="input-group mt-3">
-                    <span class="input-group-text"><i class="ios-fact bi bi-telephone-fill"></i></span>
-                    <input type="tel" class="form-control" placeholder="Actualizar teléfono" aria-label="Teléfono">
-                    <button id="guardarTelefonoBtn" class="btn btn-primary-2" type="button">Guardar</button>
-                </div>
+                        <!-- Input de Teléfono -->
+                        <div class="input-group mt-3">
+                            <span class="input-group-text"><i class="ios-fact bi bi-telephone-fill"></i></span>
+                            <input type="tel" class="form-control" placeholder="Actualizar teléfono" aria-label="Teléfono">
+                            <button id="guardarTelefonoBtn" class="btn btn-primary-2" type="button">Guardar</button>
+                        </div>
+
+                        <!-- Input de Calle -->
+                        <div class="input-group mt-3">
+                            <span class="input-group-text"><i class="ios-fact bi bi-house-fill"></i></span>
+                            <input type="text" class="form-control" placeholder="Calle" aria-label="Calle">
+                            <button id="guardarCalleBtn" class="btn btn-primary-2" type="button">Guardar</button>
+                        </div>
+
+                        <!-- Input de Altura -->
+                        <div class="input-group mt-3">
+                            <span class="input-group-text"><i class="ios-fact bi bi-geo-alt-fill"></i></span>
+                                                   <input type="text" class="form-control" placeholder="Altura" aria-label="Altura">
+                            <button id="guardarAlturaBtn" class="btn btn-primary-2" type="button">Guardar</button>
+                        </div>
+
+                        <!-- Input de Observaciones -->
+                        <div class="input-group mt-3">
+                            <span class="input-group-text"><i class="ios-fact bi bi-pencil-fill"></i></span>
+                            <textarea class="form-control" placeholder="Observaciones" aria-label="Observaciones"></textarea>
+                            <button id="guardarObservacionesBtn" class="btn btn-primary-2" type="button">Guardar</button>
+                        </div>
 
                 <!-- Estado de Despacho -->
                 <div id="estadoDespacho" class="mt-3 p-2 text-center rounded" style="font-weight: bold;"></div>
