--- a/controlMeli.html
+++ b/controlMeli.html
@@ -108,7 +108,11 @@
                 <button type="button" id="cerrarButton" class="btn btn-success me-2" data-toggle="modal" data-target="#queryModal">
                     <i class="bi bi-x-lg"></i> Cerrar
                 </button>
+                <button type="button" id="borrarButton" class="btn btn-danger me-2" onclick="borrarElemento()">
+                    <i class="bi bi-trash"></i>
+                </button>
             </div>
+            
         </div>
     </div>    
     
