--- a/controlMeli.html
+++ b/controlMeli.html
@@ -124,7 +124,7 @@
         </div>
     
         <div class="contadores">
-            <h2 class="counter" id="totalCantidad"><i class="bi bi-box-seam-fill mr-2"></i> Total Unidades: 0</h2>
+            <h2 class="counter" id="totalCantidad"><i class="bi bi-box-seam-fill mr-2"></i> Total Bultos: 0</h2>
         <h2 class="counter counterfila" id="totalFila"><i class="bi bi-bookmark-check-fill mr-2"></i> Total Etiquetas: 0</h2>
         </div>
 
