--- a/controlMeli.html
+++ b/controlMeli.html
@@ -237,7 +237,12 @@
                             <div class="button green"></div>
                         </div>
                     </div>
-                    <p class="lookBase">Comencemos a escanear!</p>                    
+                    <p class="lookBase">Comencemos a escanear!</p> 
+                    <div class="text-center mt-3">
+                        <button id="btn-actualizar" class="btn btn-primary">
+                            <i class="bi bi-arrow-clockwise"></i> Actualizar Base de Datos
+                        </button>
+                    </div>                   
                 </div>
             </div>
         </div>
