--- a/despachos.html
+++ b/despachos.html
@@ -402,28 +402,28 @@
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header bg-primary text-white">
-                <h5 class="modal-title">Seleccione el nodo que desea imprimir la etiqueta</h5>
+                <h5 class="modal-title">Nodos Andreani</h5>
                 <button type="button" class="close text-white" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <div id="nodosList">
-                    <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'C.I.T.', this)">C.I.T.</button>
-                    <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'BENAVIDEZ', this)">BENAVIDEZ</button>
-                    <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'FLORENCIO V.', this)">FLORENCIO VARELA</button>
+                <div id="nodosList" class="btn-group-vertical w-100" role="group" aria-label="Button group">
                     <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'AVELLANEDA', this)">AVELLANEDA</button>
-                    <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'VENADO T.', this)">VENADO TUERTO</button>
                     <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'BAHIA BLANCA', this)">BAHIA BLANCA</button>
-                    <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'GUALEGUAYCHU', this)">GUALEGUAYCHU</button>
+                    <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'BENAVIDEZ', this)">BENAVIDEZ</button>
+                    <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'CORDOBA', this)">CORDOBA</button>
                     <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'CONCORDIA', this)">CONCORDIA</button>
-                    <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'SANTA FE', this)">SANTA FE</button>
+                    <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'CASILDA', this)">CASILDA</button>
+                    <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'FLORENCIO V.', this)">FLORENCIO VARELA</button>
+                    <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'GUALEGUAYCHU', this)">GUALEGUAYCHU</button>
                     <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'RECONQUISTA', this)">RECONQUISTA</button>
                     <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'RESISTENCIA', this)">RESISTENCIA</button>
-                    <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'CORDOBA', this)">CORDOBA</button>
+                    <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'SANTA FE', this)">SANTA FE</button>
                     <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'TUCUMAN', this)">TUCUMAN</button>
-                    <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'CASILDA', this)">CASILDA</button>
+                    <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'VENADO T.', this)">VENADO TUERTO</button>
                     <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'VILLA MARIA', this)">VILLA MARIA</button>
+                    <button class="btn btn-outline-primary campo" onclick="generarPDFNodo('remito', 'cliente', 'fechaEntrega', 'C.I.T.', this)">C.I.T.</button>
                 </div>
             </div>
             <div class="modal-footer">
