--- a/despachos.html
+++ b/despachos.html
@@ -98,7 +98,7 @@
             </button>
             <!-- Botón de Logística Propia -->
             <button class="btn btn-secondary" id="logisticaPropiaBtn" data-toggle="modal" data-target="#logisticaModal">
-                <i class="bi bi-truck" style="font-size: 20px;"></i> Local
+                <i class="bi bi-truck" style="font-size: 20px;"></i>
             </button>
             <!-- Nuevo botón BsAr-StaFe -->
             <button class="btn btn-info" id="bsarStaFeBtn" data-toggle="modal" data-target="#bsarStaFeModal">
