--- a/despachos.html
+++ b/despachos.html
@@ -133,28 +133,34 @@
         <div class="text-center">
             <div id="porcentajes" class="d-flex flex-column flex-md-row justify-content-center align-items-center p-2">
                 <span class="percentage-card text-secondary mx-2 col-12 col-md-auto d-flex flex-column align-items-center text-center" id="andreaniPorcentaje">
-                    <div class="spinner-border text-secondary" style="width: 3rem; height: 3rem;" role="status" style="width: 1.5em; height: 1.5em;">
+                    <div class="spinner-border text-secondary" style="width: 3rem; height: 3rem;" role="status">
                         <span class="visually-hidden"></span>
                     </div>
                     <span class="ml-1">Calculando Andreani... <span id="andreaniValue"></span></span>
                 </span>
                 <span class="percentage-card text-secondary mx-2 col-12 col-md-auto d-flex flex-column align-items-center text-center" id="andesmarPorcentaje">
-                    <div class="spinner-border text-secondary" style="width: 3rem; height: 3rem;" role="status" style="width: 1.5em; height: 1.5em;">
+                    <div class="spinner-border text-secondary" style="width: 3rem; height: 3rem;" role="status">
                         <span class="visually-hidden"></span>
                     </div>
                     <span class="ml-1">Calculando Andesmar... <span id="andesmarValue"></span></span>
                 </span>
                 <span class="percentage-card text-secondary mx-2 col-12 col-md-auto d-flex flex-column align-items-center text-center" id="cruzDelSurPorcentaje">
-                    <div class="spinner-border text-secondary" style="width: 3rem; height: 3rem;" role="status" style="width: 1.5em; height: 1.5em;">
+                    <div class="spinner-border text-secondary" style="width: 3rem; height: 3rem;" role="status">
                         <span class="visually-hidden"></span>
                     </div>
                     <span class="ml-1">Calculando Cruz del Sur... <span id="cruzDelSurValue"></span></span>
                 </span>
                 <span class="percentage-card text-secondary mx-2 col-12 col-md-auto d-flex flex-column align-items-center text-center" id="ocaPorcentaje">
-                    <div class="spinner-border text-secondary" style="width: 3rem; height: 3rem;" role="status" style="width: 1.5em; height: 1.5em;">
+                    <div class="spinner-border text-secondary" style="width: 3rem; height: 3rem;" role="status">
                         <span class="visually-hidden"></span>
                     </div>
-                    <span class="ml-1">Calculando OCA... <span id="ocaValue"></span></span>
+                    <span class="ml-1">Calculando Logistica OCA... <span id="ocaValue"></span></span>
+                </span>
+                <span class="percentage-card text-secondary mx-2 col-12 col-md-auto d-flex flex-column align-items-center text-center" id="placeItPorcentaje">
+                    <div class="spinner-border text-secondary" style="width: 3rem; height: 3rem;" role="status">
+                        <span class="visually-hidden"></span>
+                    </div>
+                    <span class="ml-1">Calculando PlaceIt... <span id="placeItValue"></span></span>
                 </span>
                 <span class="macos-button-porcentaje" id="SinDespacharPorcentaje">
                     <div class="spinner-border text-secondary" role="status" style="width: 1.5em; height: 1.5em;">
@@ -164,7 +170,7 @@
                 </span>
             </div> 
         </div>   
-        <div class="estadisticas-header"><i class="bi bi-info-circle-fill"></i> Estadísticas de los últimos 30 días</div>                             
+        <div class="estadisticas-header"><i class="bi bi-info-circle-fill"></i> Estadísticas de los últimos 30 días</div>                                  
 
 <div class="table-responsive">
     <table id="data-table" class="table table-striped">
