--- a/despachos.html
+++ b/despachos.html
@@ -163,10 +163,7 @@
                     <span class="ml-1">Calculando PlaceIt... <span id="placeItValue"></span></span>
                 </span>
                 <span class="macos-button-porcentaje" id="SinDespacharPorcentaje">
-                    <div class="spinner-border text-secondary" role="status" style="width: 1.5em; height: 1.5em;">
-                        <span class="visually-hidden"></span>
-                    </div>
-                    <span class="ml-1">Calculando Sin Despachar... <span id="SinDespacharValue"></span></span>
+                    <i class="bi bi-calculator" style="font-size: 20px;"></i> Calculando en preparación...
                 </span>
             </div> 
         </div>   
