--- a/MeliArPlaceit.html
+++ b/MeliArPlaceit.html
@@ -84,7 +84,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="./meliAr.html" class="nav-link active"><img id="meli-logo" src="./Img/meli.png">Etiquetas MeLi</a></li>
+                    <li class="nav-item"><a href="./meliAr.html" class="nav-link active"><img id="meli-logo2" src="./Img/meli.png">Etiquetas MeLi</a></li>
                 </ul>
             </div>
         </div>
