--- a/facturacionMl.html
+++ b/facturacionMl.html
@@ -62,9 +62,7 @@
 <body class="envios-body">
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    
         <div class="container">
-            
             <a class="navbar-brand" href="#">
                 <img src="./Img/Novogar N.png" alt="Logo" class="navbar-logo">
                 <span class="navbar-brand-text">L<span class="navbar-brand-text4">gi</span><span class="navbar-brand-text2">Paq</span> <img class="blackCat" src="./Img/Location.gif" alt="LogiPaq" srcset=""> </span>
@@ -74,13 +72,28 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a href="./index.html" class="nav-link">Etiquetas</a></li>
-                    <li class="nav-item"><a href="./envios.html" class="nav-link">Andesmar</a></li>
+                    <li class="nav-item"><a href="./index.html" class="nav-link">Etiquetado</a></li>
+                    <li class="nav-item"><a href="./envios.html" class="nav-link">Envios Andesmar</a></li>
                     <li class="nav-item"><a href="./despachos.html" class="nav-link">Logistica</a></li>
-                    <li class="nav-item"><a href="./facturacionMl.html" class="nav-link active">Fact.</a></li>
-                    <li class="nav-item"><a href="./meliAr.html" class="nav-link"><img id="meli-logo" src="./Img/meli.png">MeLi</a></li>
-                    <li class="nav-item"><a href="./controlMeli.html" class="nav-link">Colecta</a></li>
                     <li class="nav-item"><a href="./bna.html" class="nav-link">Tiendas Virtuales</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            MeLi <img id="meli-logo" src="./Img/meli.png">
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item active" href="./facturacionMl.html">Facturacion Mercado libre</a>
+                            <a class="dropdown-item" href="./meliAr.html">Envios Mercado Libre</a>
+                            <a class="dropdown-item" href="./controlMeli.html">Colecta Mercado libre</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Más
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="./MeliArPlaceit.html">Envios Meli PlaceIt</a>
+                        </div>
+                    </li>
                 </ul>
             </div>
         </div>
